# meridian-trello-test

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.agent/: ARCHITECTURE.md  IDE_ADAPTERS.md  MERIDIAN.md
.agent/agents/: architecture-guardian.md  board-keeper.md  documentation-strategist.md  process-manager.md  scope-architect.md  security-steward.md  sprint-planner.md
.agent/references/: agents-help.md  commit-after-us-close.md  instruction-surfaces.md  scrum-meridian-map.md  start-here.md  usage-guide.md
.agent/rules/: MERIDIAN.md  meridian.mdc
.agent/scripts/: meridian_section_contracts.py  sync_cursor_kit.sh  (+2 more)
docs/: 00_scope.md  01_tech_stack.md  02_security.md  03_user_types.md  04_principles.md  05_architecture.md  06_database.md  07_api_contracts.md  08_environments.md  11_decisions.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260702173000_initial_schema.sql  20260702191744_agile_schema.sql  20260702193000_us_meridian_v2.sql  20260702193736_drop_kanban_v1.sql  20260702194352_meridian_full_schema.sql  20260702220000_workflow_columns_en.sql  20260702230555_version_epics.sql
src-tauri/permissions/: allow-kanban-commands.toml
src-tauri/src/: lib.rs  main.rs  models.rs  util.rs
src-tauri/src/commands/: boards.rs  cards.rs  checklist.rs  columns.rs  mod.rs  tags.rs
src-tauri/src/commands/agile/: epics.rs  ids.rs  mod.rs  projects.rs  relations.rs  sprints.rs  stories.rs  versions.rs  workflow.rs
src-tauri/src/db/: mod.rs
(+239 files in other folders)
